--- a/my.env
+++ b/my.env
@@ -103,7 +103,7 @@ POSTGRES_DB=qfcloudb
 POSTGRES_HOST="change_me"
 POSTGRES_PORT=5432
 # "prefer" OR "require" most of the times
-POSTGRES_SSLMODE=prefer
+POSTGRES_SSLMODE=require
 HOST_POSTGRES_PORT=5432
 
 # Sentry DSN. Missing value disables Sentry logging. Can be found on https://opengisch.sentry.io/settings/projects/qfieldcloud/keys/ .
@@ -159,7 +159,7 @@ ACCOUNT_EMAIL_VERIFICATION=optional
 # Docker compose default network also used by the docker in docker workers
 # If empty value, a default name will be generated at build time, for example `qfieldcloud_default`.
 # DEFAULT: ""
-QFIELDCLOUD_DEFAULT_NETWORK="qfcloud-network"
+# QFIELDCLOUD_DEFAULT_NETWORK="qfcloud-network"
 
 # Admin URI. Requires slash in the end. Please use something that is hard to guess.
 # DEFAULT: "admin/"
@@ -167,7 +167,7 @@ QFIELDCLOUD_ADMIN_URI=dev/
 
 # QFieldCloud URL used within the worker as configuration for qfieldcloud-sdk.
 # DEFAULT: "http://app:8000/api/v1/"
-QFIELDCLOUD_WORKER_QFIELDCLOUD_URL=http://app:8000/api/v1/
+QFIELDCLOUD_WORKER_QFIELDCLOUD_URL="http://change_me/api/v1/"
 
 # number of parallel workers
 # DEFAULT: 1
