--- a/my.env
+++ b/my.env
@@ -21,20 +21,20 @@ SECRET_KEY=change_me
 
 # TLS certificate filename from within the `nginx` container.
 # For usage with Let's Encrypt certificate, use as:
-QFIELDCLOUD_TLS_CERT="/etc/letsencrypt/live/${QFIELDCLOUD_HOST}/fullchain.pem"
+# QFIELDCLOUD_TLS_CERT="/etc/letsencrypt/live/${QFIELDCLOUD_HOST}/fullchain.pem"
 # DEFAULT: "/etc/nginx/certs/${QFIELDCLOUD_HOST}.pem"
-# QFIELDCLOUD_TLS_CERT="/etc/nginx/certs/${QFIELDCLOUD_HOST}.pem"
+QFIELDCLOUD_TLS_CERT="/etc/nginx/certs/change_me.pem"
 
 # TLS private key filename from within the `nginx` container.
 # For usage with Let's Encrypt certificate, use as:
-QFIELDCLOUD_TLS_KEY="/etc/letsencrypt/live/${QFIELDCLOUD_HOST}/privkey.pem"
+# QFIELDCLOUD_TLS_KEY="/etc/letsencrypt/live/${QFIELDCLOUD_HOST}/privkey.pem"
 # DEFAULT: "/etc/nginx/certs/${QFIELDCLOUD_HOST}-key.pem"
-# QFIELDCLOUD_TLS_KEY="/etc/nginx/certs/${QFIELDCLOUD_HOST}-key.pem"
+QFIELDCLOUD_TLS_KEY="/etc/nginx/certs/change_me.key"
 
 # TLS DF parameters filename from within the `nginx` container.
 # When empty, no DF parameters are used.
 # DEFAULT: "/etc/nginx/dhparams/ssl-dhparams.pem"
-QFIELDCLOUD_TLS_DHPARAMS="/etc/nginx/dhparams/ssl-dhparams.pem"
+QFIELDCLOUD_TLS_DHPARAMS="/etc/nginx/dhparams/change_me.pem"
 
 LETSENCRYPT_EMAIL="change_me"
 LETSENCRYPT_RSA_KEY_SIZE=4096
