Some fixes for my own certificate

--- a/my.env
+++ b/my.env
@@ -36,10 +36,10 @@ QFIELDCLOUD_TLS_KEY="/etc/nginx/certs/change_me.key"
 # DEFAULT: "/etc/nginx/dhparams/ssl-dhparams.pem"
 QFIELDCLOUD_TLS_DHPARAMS="/etc/nginx/dhparams/change_me.pem"
 
-LETSENCRYPT_EMAIL="change_me"
-LETSENCRYPT_RSA_KEY_SIZE=4096
+# LETSENCRYPT_EMAIL="change_me"
+# LETSENCRYPT_RSA_KEY_SIZE=4096
 # Set to 1 if you're testing your setup to avoid hitting request limits
-LETSENCRYPT_STAGING=0
+# LETSENCRYPT_STAGING=0
 
 
 ##################
@@ -167,7 +167,7 @@ QFIELDCLOUD_ADMIN_URI=dev/
 
 # QFieldCloud URL used within the worker as configuration for qfieldcloud-sdk.
 # DEFAULT: "http://app:8000/api/v1/"
-QFIELDCLOUD_WORKER_QFIELDCLOUD_URL="http://change_me/api/v1/"
+QFIELDCLOUD_WORKER_QFIELDCLOUD_URL="https://change_me/api/v1/"
 
 # number of parallel workers
 # DEFAULT: 1
