--- a/my-docker-compose.yml
+++ b/my-docker-compose.yml
@@ -96,11 +96,11 @@ services:
       context: ./docker-nginx
     restart: unless-stopped
     volumes:
-      - ./conf/certbot/conf:/etc/letsencrypt:ro
+      # - ./conf/certbot/conf:/etc/letsencrypt:ro
       - ./conf/nginx/certs/:/etc/nginx/certs/:ro
       - ./conf/nginx/config.d:/etc/nginx/config.d/:ro
       - ./conf/nginx/dhparams:/etc/nginx/dhparams/:ro
-      - certbot_www:/var/www/certbot
+      # - certbot_www:/var/www/certbot
     ports:
       - ${WEB_HTTP_PORT}:80
       - ${WEB_HTTPS_PORT}:443
@@ -197,4 +197,4 @@ volumes:
   static_volume:
   # media_volume:
   transformation_grids:
-  certbot_www:
+  # certbot_www:
