--- a/extra.conf.template
+++ b/extra.conf.template
@@ -1,6 +1,6 @@
 
 server {
-  listen 8007;
+  listen 8007 ssl;
 
   ssl_certificate     ${QFIELDCLOUD_TLS_CERT};
   ssl_certificate_key ${QFIELDCLOUD_TLS_KEY};
