--- a/my-docker-compose.override.standalone.yml
+++ b/my-docker-compose.override.standalone.yml
@@ -10,23 +10,18 @@ services:
     volumes:
       - minio_data1:/data1
       - minio_data2:/data2
-      - minio_data3:/data3
-      - minio_data4:/data4
+      # - minio_data3:/data3
+      # - minio_data4:/data4
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
       MINIO_BROWSER_REDIRECT_URL: http://${QFIELDCLOUD_HOST}:${MINIO_BROWSER_PORT}
-    command: server /data{1...4} --console-address :9001
+      MINIO_BROWSER: ${MINIO_BROWSER}
+    # command: server /data{1...4} --console-address :9001
+    command: server /data{1...2} --console-address :9001
     healthcheck:
-        test: [
-          "CMD",
-          "curl",
-          "-A",
-          "Mozilla/5.0 (X11; Linux x86_64; rv:30.0) Gecko/20100101 Firefox/30.0",
-          "-f",
-          "http://localhost:9001/minio/index.html"
-        ]
-        interval: 5s
+        test: ["CMD", "mc", "alias", "set", "minio", "http://localhost:9000", "$MINIO_ROOT_USER", "$MINIO_ROOT_PASSWORD"]
+        interval: 60s
         timeout: 20s
         retries: 5
     ports:
@@ -45,5 +40,5 @@ services:
 volumes:
   minio_data1:
   minio_data2:
-  minio_data3:
-  minio_data4:
+  # minio_data3:
+  # minio_data4:
