--- a/my.env
+++ b/my.env
@@ -84,6 +84,11 @@ MINIO_API_PORT=8009
 # DEFAULT: 8010
 MINIO_BROWSER_PORT=8010
 
+# Turn on/off the minio browser endpoint.
+# NOTE: Ignored if `minio` is not used.
+# DEFAULT: off
+MINIO_BROWSER=off
+
 WEB_HTTP_PORT=8008
 WEB_HTTPS_PORT=8011
 
