Try to put minio behind nginx

--- a/my-docker-compose.yml
+++ b/my-docker-compose.yml
@@ -104,6 +104,8 @@ services:
     ports:
       - ${WEB_HTTP_PORT}:80
       - ${WEB_HTTPS_PORT}:443
+      - ${EXTRA_HTTPS_PORT}:3838
+      - ${MINIO_API_PORT}:9000
     environment:
       QFIELDCLOUD_HOST: ${QFIELDCLOUD_HOST}
       QFIELDCLOUD_TLS_CERT: ${QFIELDCLOUD_TLS_CERT}
@@ -111,9 +113,9 @@ services:
       QFIELDCLOUD_TLS_DHPARAMS: ${QFIELDCLOUD_TLS_DHPARAMS}
       WEB_HTTP_PORT: ${WEB_HTTP_PORT}
       WEB_HTTPS_PORT: ${WEB_HTTPS_PORT}
-      LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
-      LETSENCRYPT_STAGING: ${LETSENCRYPT_STAGING}
-      LETSENCRYPT_RSA_KEY_SIZE: ${LETSENCRYPT_RSA_KEY_SIZE}
+      # LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
+      # LETSENCRYPT_STAGING: ${LETSENCRYPT_STAGING}
+      # LETSENCRYPT_RSA_KEY_SIZE: ${LETSENCRYPT_RSA_KEY_SIZE}
       NGINX_ERROR_LOG_LEVEL: ${NGINX_ERROR_LOG_LEVEL:-error}
     logging:
       driver: "json-file"
