--- a/my-docker-compose.override.standalone.yml
+++ b/my-docker-compose.override.standalone.yml
@@ -15,18 +15,18 @@ services:
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-      MINIO_BROWSER_REDIRECT_URL: http://${QFIELDCLOUD_HOST}:${MINIO_BROWSER_PORT}
+      # MINIO_BROWSER_REDIRECT_URL: http://${QFIELDCLOUD_HOST}:${MINIO_BROWSER_PORT}
       MINIO_BROWSER: ${MINIO_BROWSER}
     # command: server /data{1...4} --console-address :9001
-    command: server /data{1...2} --console-address :9001
+    command: server /data{1...2}
     healthcheck:
         test: ["CMD", "mc", "alias", "set", "minio", "http://localhost:9000", "$MINIO_ROOT_USER", "$MINIO_ROOT_PASSWORD"]
         interval: 60s
         timeout: 20s
         retries: 5
     ports:
-      - ${MINIO_BROWSER_PORT}:9001
-      - ${MINIO_API_PORT}:9000
+      # - 172.17.0.1:9001:9001
+      - 172.17.0.1:9000:9000
 
   createbuckets:
     build:
