--- a/my.env
+++ b/my.env
@@ -36,7 +36,7 @@ QFIELDCLOUD_TLS_KEY="/etc/nginx/certs/change_me.key"
 # DEFAULT: "/etc/nginx/dhparams/ssl-dhparams.pem"
 QFIELDCLOUD_TLS_DHPARAMS="/etc/nginx/dhparams/change_me.pem"
 
-# LETSENCRYPT_EMAIL="change_me"
+# LETSENCRYPT_EMAIL=""
 # LETSENCRYPT_RSA_KEY_SIZE=4096
 # Set to 1 if you're testing your setup to avoid hitting request limits
 # LETSENCRYPT_STAGING=0
@@ -55,7 +55,7 @@ STORAGES='{
                 "secret_key": "change_me",
                 "bucket_name": "qfcloud-storage",
                 "region_name": "",
-                "endpoint_url": "http://172.17.0.1:8009"
+                "endpoint_url": "http://172.17.0.1:9000"
             },
             "QFC_IS_LEGACY": false
         }
@@ -73,9 +73,8 @@ MINIO_ROOT_USER="dev"
 # DEFAULT: MINIO_ROOT_PASSWORD=minioadmin
 MINIO_ROOT_PASSWORD="change_me"
 
-# Public port to the minio API endpoint. It must match the configured port in `STORAGE_ENDPOINT_URL`.
+# Public port to the minio API endpoint.
 # NOTE: Ignored if `minio` is not used.
-# NOTE: Needs to be the same as in the `STORAGES` setting in standalone config.
 # DEFAULT: 8009
 MINIO_API_PORT=8009
 
@@ -89,8 +88,12 @@ MINIO_BROWSER_PORT=8010
 # DEFAULT: off
 MINIO_BROWSER=off
 
-WEB_HTTP_PORT=8008
-WEB_HTTPS_PORT=8011
+WEB_HTTP_PORT=80
+WEB_HTTPS_PORT=443
+
+# Public port to serve an additional Docker application.
+# DEFAULT: 3838
+EXTRA_HTTPS_PORT=3838
 
 # Messages are logged at the specified level and all more severe levels. The nginx default is `error`. Read more on https://nginx.org/en/docs/ngx_core_module.html#error_log.
 # OPTIONS: debug, info, notice, warn, error, crit, alert, emerg
@@ -164,7 +167,7 @@ ACCOUNT_EMAIL_VERIFICATION=optional
 # Docker compose default network also used by the docker in docker workers
 # If empty value, a default name will be generated at build time, for example `qfieldcloud_default`.
 # DEFAULT: ""
-# QFIELDCLOUD_DEFAULT_NETWORK="qfcloud-network"
+QFIELDCLOUD_DEFAULT_NETWORK="default"
 
 # Admin URI. Requires slash in the end. Please use something that is hard to guess.
 # DEFAULT: "admin/"
