--- a/my.env
+++ b/my.env
@@ -75,6 +75,7 @@ MINIO_ROOT_PASSWORD="change_me"
 
 # Public port to the minio API endpoint.
 # NOTE: Ignored if `minio` is not used.
+# NOTE: Needs to be the same as in the `STORAGES` setting in standalone config.
 # DEFAULT: 8009
 MINIO_API_PORT=8009
 
