--- a/my.env
+++ b/my.env
@@ -9,8 +9,8 @@ DEBUG=0
 ENVIRONMENT=production
 
 QFIELDCLOUD_HOST="change_me"
+DJANGO_ALLOWED_HOSTS="change_me"
 DJANGO_SETTINGS_MODULE=qfieldcloud.settings
-DJANGO_ALLOWED_HOSTS="localhost 127.0.0.1 0.0.0.0 app nginx change_me"
 
 SECRET_KEY=change_me
 
@@ -89,12 +89,12 @@ MINIO_BROWSER_PORT=8010
 # DEFAULT: off
 MINIO_BROWSER=off
 
-WEB_HTTP_PORT=80
-WEB_HTTPS_PORT=443
+WEB_HTTP_PORT=8008
+WEB_HTTPS_PORT=8007
 
 # Public port to serve an additional Docker application.
 # DEFAULT: 3838
-EXTRA_HTTPS_PORT=3838
+EXTRA_HTTPS_PORT=443
 
 # Messages are logged at the specified level and all more severe levels. The nginx default is `error`. Read more on https://nginx.org/en/docs/ngx_core_module.html#error_log.
 # OPTIONS: debug, info, notice, warn, error, crit, alert, emerg
@@ -176,7 +176,7 @@ QFIELDCLOUD_ADMIN_URI=dev/
 
 # QFieldCloud URL used within the worker as configuration for qfieldcloud-sdk.
 # DEFAULT: "http://app:8000/api/v1/"
-QFIELDCLOUD_WORKER_QFIELDCLOUD_URL="https://change_me/api/v1/"
+QFIELDCLOUD_WORKER_QFIELDCLOUD_URL="https://change_me:8007/api/v1/"
 
 # number of parallel workers
 # DEFAULT: 1
